--- a/PracticaMaD/Web/Pages/User/App_LocalResources/Follows.resx
+++ b/PracticaMaD/Web/Pages/User/App_LocalResources/Follows.resx
@@ -117,28 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="lblWelcome.Hello.Text" xml:space="preserve">
-    <value>Hello</value>
+  <data name="lblInvalidUser" xml:space="preserve">
+    <value>Invalid User</value>
   </data>
-  <data name="lblWelcome.Text" xml:space="preserve">
-    <value>Welcome to Photogram</value>
-  </data>
-  <data name="lclFooter.Text" xml:space="preserve">
-    <value>Photogram, an Instagram copy</value>
-  </data>
-  <data name="lclPageTitle.Text" xml:space="preserve">
-    <value>Photogram</value>
-  </data>
-  <data name="lnkAuthenticate.Text" xml:space="preserve">
-    <value>Authentication</value>
-  </data>
-  <data name="lnkLogout.Text" xml:space="preserve">
-    <value>Logout</value>
-  </data>
-  <data name="lnkPerfil.Text" xml:space="preserve">
-    <value>Mi Perfil</value>
-  </data>
-  <data name="lnkUpdate.Text" xml:space="preserve">
-    <value>Update Profile</value>
+  <data name="lclMenuExplanation.Text" xml:space="preserve">
+    <value>Following users</value>
   </data>
 </root>
