--- a/PracticaMaD/Web/Pages/User/App_LocalResources/UploadImage.aspx.resx
+++ b/PracticaMaD/Web/Pages/User/App_LocalResources/UploadImage.aspx.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="btnDelete.Text" xml:space="preserve">
-    <value>Delete Image</value>
+  <data name="lblInvalidUser" xml:space="preserve">
+    <value>Invalid User</value>
+  </data>
+  <data name="lclMenuExplanation.Text" xml:space="preserve">
+    <value>Following users</value>
   </data>
 </root>
