--- a/PracticaMaD/Web/Pages/User/App_LocalResources/AddComment.aspx.resx
+++ b/PracticaMaD/Web/Pages/User/App_LocalResources/AddComment.aspx.resx
@@ -117,16 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="lblUserExistsResource1.Text" xml:space="preserve">
-    <value>Usuario existe en la Base de Datos</value>
-  </data>
-  <data name="lblUserNameResource1.Text" xml:space="preserve">
-    <value>Nombre de Usuario:</value>
-  </data>
-  <data name="lblUserNotExistsResource1.Text" xml:space="preserve">
-    <value>Usuario NO Existe en la Base de Datos</value>
-  </data>
-  <data name="lblExplanation_txt" xml:space="preserve">
-    <value>Búsqueda de usuarios</value>
+  <data name="lclMenuExplanation.Text" xml:space="preserve">
+    <value>Add Comment</value>
   </data>
 </root>
