--- a/PracticaMaD/Web/Pages/User/App_LocalResources/Follows.aspx.resx
+++ b/PracticaMaD/Web/Pages/User/App_LocalResources/Follows.aspx.resx
@@ -117,16 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="lblUserExistsResource1.Text" xml:space="preserve">
-    <value>Usuario atopado na Base de Datos</value>
+  <data name="lblInvalidUser" xml:space="preserve">
+    <value>Invalid User</value>
   </data>
-  <data name="lblUserNameResource1.Text" xml:space="preserve">
-    <value>Nome de Usuario:</value>
-  </data>
-  <data name="lblUserNotExistsResource1.Text" xml:space="preserve">
-    <value>Usuario NON atopado na Base de Datos</value>
-  </data>
-  <data name="lblExplanation_txt" xml:space="preserve">
-    <value>Procura de usuarios</value>
+  <data name="lclMenuExplanation.Text" xml:space="preserve">
+    <value>Follows users</value>
   </data>
 </root>
