--- a/PracticaMaD/Web/Pages/User/App_LocalResources/Register.aspx.resx
+++ b/PracticaMaD/Web/Pages/User/App_LocalResources/Register.aspx.resx
@@ -165,4 +165,7 @@
   <data name="lblWelcome.Text" xml:space="preserve">
     <value>Welcome</value>
   </data>
+  <data name="String1" xml:space="preserve">
+    <value>Register</value>
+  </data>
 </root>
