--- a/PracticaMaD/Web/Pages/User/App_LocalResources/CommentDetails.aspx.resx
+++ b/PracticaMaD/Web/Pages/User/App_LocalResources/CommentDetails.aspx.resx
@@ -121,6 +121,6 @@
     <value>Invalid User</value>
   </data>
   <data name="lclMenuExplanation.Text" xml:space="preserve">
-    <value>Following users</value>
+    <value>Comment Details</value>
   </data>
 </root>
