--- a/PracticaMaD/Web/Pages/User/App_LocalResources/EditComment.aspx.resx
+++ b/PracticaMaD/Web/Pages/User/App_LocalResources/EditComment.aspx.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="lblImageTitle.Text" xml:space="preserve">
-    <value>Title :</value>
+  <data name="lclMenuExplanation.Text" xml:space="preserve">
+    <value>Edit Comment</value>
   </data>
 </root>
