--- a/PracticaMaD/Web/Pages/User/App_LocalResources/Followers.aspx.resx
+++ b/PracticaMaD/Web/Pages/User/App_LocalResources/Followers.aspx.resx
@@ -112,15 +112,15 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="lclContent.Text" xml:space="preserve">
-    <value>Contido da Páxina Principal de Photogram</value>
+  <data name="lblInvalidUser" xml:space="preserve">
+    <value>Invalid User</value>
   </data>
-  <data name="Page.Title" xml:space="preserve">
-    <value>Photogram - Páxina Principal</value>
+  <data name="lclMenuExplanation.Text" xml:space="preserve">
+    <value>Follower List</value>
   </data>
 </root>
