--- a/PracticaMaD/Web/Pages/User/App_LocalResources/PerfilCargado.aspx.resx
+++ b/PracticaMaD/Web/Pages/User/App_LocalResources/PerfilCargado.aspx.resx
@@ -133,7 +133,7 @@
     <value>Invalid User</value>
   </data>
   <data name="lclMenuExplanation.Text" xml:space="preserve">
-    <value>Perfil de usuario</value>
+    <value>User profile</value>
   </data>
   <data name="lnkFollows.Text" xml:space="preserve">
     <value>Follows</value>
