--- a/PracticaMaD/Web/Pages/User/App_LocalResources/UploadImage.aspx.resx
+++ b/PracticaMaD/Web/Pages/User/App_LocalResources/UploadImage.aspx.resx
@@ -121,6 +121,6 @@
     <value>Invalid User</value>
   </data>
   <data name="lclMenuExplanation.Text" xml:space="preserve">
-    <value>Following users</value>
+    <value>Image Upload</value>
   </data>
 </root>
