--- a/PracticaMaD/Web/Pages/App_LocalResources/MainPage.aspx.resx
+++ b/PracticaMaD/Web/Pages/App_LocalResources/MainPage.aspx.resx
@@ -112,11 +112,14 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="lblRecentUploads.Text" xml:space="preserve">
+    <value>Recent Uploads : </value>
+  </data>
   <data name="lclContent.Text" xml:space="preserve">
     <value>Photogram Main Page Content</value>
   </data>
